syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message GetFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1;
}

message GetFirmwareHubResponse {
	FirmwareHub firmware_hub = 1;
}
